--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@ body {
   width: 100%;
   height: 10%;
 }
-/*.header {
+.header {
         color: red;
-      }*/
+      }
 .left {
   display: inline-block;
   /* border: 2px solid red;*/
